--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,17 @@ td {
   font-size: 20px;
 }
 
+button {
+    background-color: #0066ff;
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+}
+
 .rc-table-row {
   font-size: 30px;
   border: 1px solid black;
