--- a/src/index.css
+++ b/src/index.css
@@ -45,6 +45,10 @@ button {
     font-size: 16px;
 }
 
+button.active {
+  background-color: red;
+}
+
 .rc-table-row {
   font-size: 30px;
   border: 1px solid black;
